syntax = "proto3";

package seerep;

message PointField
{
  // Name of the field
  string name = 1;
  // Offset from the start of the point struct
  uint32 offset = 2;

  enum Datatype
  {
    UNSET = 0;
    INT8 = 1;
    UINT8 = 2;
    INT16 = 3;
    UINT16 = 4;
    INT32 = 5;
    UINT32 = 6;
    FLOAT32 = 7;
    FLOAT64 = 8;
  }
  Datatype datatype = 3;
  // number of elements in the field
  uint32 count = 4;
}
